# dynamic_protobufer_compiler

./: .gitignore  CMakeLists.txt  main.cpp
proto/: CMakeLists.txt  person.proto
proto/cmake/: libprotobuf.cmake  libprotoc.cmake  protoc.cmake
